comparing per-cell residuals where ICET and DNN disagree: still need to use U and L to project into useful dimensions of each gaussian

--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -9,9 +9,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Derm\\anaconda3\\envs\\tf23\\lib\\site-packages\\numpy\\_distributor_init.py:32: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\Derm\\anaconda3\\envs\\tf23\\lib\\site-packages\\numpy\\.libs\\libopenblas.PYQHXLVVQ7VESDPUVUADXEVJOBGHJPAY.gfortran-win_amd64.dll\n",
+      "C:\\Users\\Derm\\anaconda3\\envs\\tf23\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
+      "  stacklevel=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(180000)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosaving every 180 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "from vedo import *\n",
     "import os\n",
@@ -34,67 +61,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(tf.__version__)\n",
-    "\n",
-    "#test import model\n",
-    "model = tf.keras.models.load_model(\"perspective_shift/Net.kmod\")\n",
-    "\n",
-    "points_per_sample = 25 #num pts per scan - defined in MatLab script\n",
-    "d1 = np.loadtxt('perspective_shift/viz_scan1.txt')\n",
-    "d2 = np.loadtxt('perspective_shift/viz_scan2.txt')\n",
-    "gt = np.loadtxt('perspective_shift/viz_ground_truth.txt')\n",
-    "true_pos1 = np.loadtxt('perspective_shift/viz_true_pos1.txt')\n",
-    "scan1 = tf.reshape(tf.convert_to_tensor(d1), [-1, points_per_sample, 3])\n",
-    "scan2 = tf.reshape(tf.convert_to_tensor(d2), [-1, points_per_sample, 3])\n",
-    "gt = tf.convert_to_tensor(gt)\n",
-    "\n",
-    "#split data into training and validation sets\n",
-    "tsplit = 0.0 #this fraction goes into training\n",
-    "ntrain = int(tsplit*tf.shape(scan1)[0].numpy())\n",
-    "x_train = tf.concat((scan1[:ntrain], scan2[:ntrain]), axis = 1)\n",
-    "x_test = tf.concat((scan1[ntrain:], scan2[ntrain:]), axis = 1)\n",
-    "y_train = gt[:ntrain]\n",
-    "y_test = gt[ntrain:]\n",
-    "# print(tf.shape(x_train))\n",
-    "\n",
-    "#appy model to points\n",
-    "n = 1 #sample number (from x_test)\n",
-    "# print(tf.shape(x_test))\n",
-    "\n",
-    "c1 = np.array([x_test[n,:points_per_sample,0].numpy(), x_test[n,:points_per_sample,1].numpy(), x_test[n,:points_per_sample,2].numpy()])\n",
-    "c2 = np.array([x_test[n,points_per_sample:,0].numpy(), x_test[n,points_per_sample:,1].numpy(), x_test[n,points_per_sample:,2].numpy()])\n",
-    "\n",
-    "inputs = x_test[n][None,:]\n",
-    "runlen = 5 #number of iterations to run iterative PC matching\n",
-    "correction = 0\n",
-    "for i in range(runlen):\n",
-    "    correction += 0.1*model.predict(inputs)[0] #show what the network thinks\n",
-    "#     correction = 0.1*y_test[n] #show actual solution\n",
-    "    c1_new = np.array([c1[0,:] + correction[0], c1[1,:] + correction[1], c1[2,:] + correction[2]])\n",
-    "    inputs = np.append(c1_new, c2, axis = 1).T[None,:,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#test \n",
-    "print(correction)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([0. 0. 0. 0. 0. 0.], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.31410828 -0.00153609  0.09991124 -0.00620458  0.00421205  0.01244162], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.33431602  0.00695762  0.05746645 -0.00567841  0.00349628  0.0138566 ], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.34085846 -0.0063442   0.02839667 -0.00417265  0.0029643   0.01407214], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.34080637 -0.0074435   0.00955635 -0.00288681  0.00245076  0.01413573], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.3411951  -0.00805545  0.00306188 -0.00260942  0.0022355   0.01418984], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.3427948  -0.0112745   0.00202577 -0.00269312  0.00242362  0.01419091], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.3434888  -0.01408371 -0.00178519 -0.00258752  0.00253043  0.01416827], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.34443748 -0.01737556 -0.00741063 -0.00240817  0.00275299  0.01412222], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.3443934  -0.01725774 -0.01102356 -0.00249238  0.00346886  0.01409075], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.34454763 -0.01723238 -0.01242729 -0.00250928  0.00391234  0.01406707], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.34471405 -0.01745864 -0.0128724  -0.00251829  0.00404155  0.01406602], shape=(6,), dtype=float32)\n",
+      "\n",
+      " ---identified moving objects---\n",
+      "pred_stds: \n",
+      " tf.Tensor([0.00165539 0.00200249 0.00698845 0.00086046 0.00049221 0.00012146], shape=(6,), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "from ICET_spherical import ICET\n",
     "\n",
@@ -107,10 +125,10 @@
     "# idx = 220\n",
     "dataset = pykitti.raw(basedir, date, drive)\n",
     "velo1 = dataset.get_velo(idx) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
-    "# c1 = velo1[:,:3]\n",
+    "c1 = velo1[:,:3]\n",
     "c1 = c1[c1[:,2] > -1.5] #ignore ground plane\n",
     "velo2 = dataset.get_velo(idx+1) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
-    "# c2 = velo2[:,:3]\n",
+    "c2 = velo2[:,:3]\n",
     "c2 = c2[c2[:,2] > -1.5] #ignore ground plane\n",
     "# ------------------------------------------------------------------------------------\n",
     "\n",
@@ -132,7 +150,7 @@
     "# D = True\n",
     "D = False\n",
     "X = tf.constant([0., 0., 0., 0., 0., 0.])\n",
-    "it1 = ICET(cloud1 = c1, cloud2 = c2,  fid = 90, draw = False, x0 = X, niter = 12, group= 2, RM = True)\n",
+    "it1 = ICET(cloud1 = c1, cloud2 = c2,  fid = 50, draw = False, x0 = X, niter = 12, group= 2, RM = True)\n",
     "# it2 = ICET(cloud1 = it1.cloud1_static, cloud2 = c2, fid = 50, niter = 20, draw = True, group = 2, RM = False)\n",
     "\n",
     "if D:\n",
@@ -141,9 +159,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 75,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n",
+      "WARNING:tensorflow:AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x0000015AA5A2FE58> and will run it as-is.\n",
+      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
+      "Cause: unsupported operand type(s) for -: 'NoneType' and 'int'\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING: AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x0000015AA5A2FE58> and will run it as-is.\n",
+      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
+      "Cause: unsupported operand type(s) for -: 'NoneType' and 'int'\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "tf.Tensor([-0.02386692  0.00629028 -0.00421011], shape=(3,), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "#Pre-process points from ICET to feed to DNN\n",
     "\n",
@@ -179,26 +216,152 @@
     "\n",
     "# print(it1.cloud1_tensor)\n",
     "from1 = tf.gather(it1.cloud1_tensor, idx1)\n",
-    "from2 = tf.gather(it1.cloud2_tensor_OG, idx2)\n",
-    "print(from1)\n",
+    "# from2 = tf.gather(it1.cloud2_tensor_OG, idx2)\n",
+    "from2 = tf.gather(it1.cloud2_tensor, idx2)\n",
+    "# print(from1)\n",
     "\n",
-    "# x_test = tf.concat((from1, from2), axis = 1)\n",
-    "np.savetxt('perspective_shift/ICET_KITTI_frame0.txt', tf.reshape(from1, [-1, 3]).numpy())\n",
-    "np.savetxt('perspective_shift/ICET_KITTI_frame1.txt', tf.reshape(from2, [-1, 3]).numpy())\n",
+    "x_test = tf.concat((from1, from2), axis = 1)\n",
+    "# np.savetxt('perspective_shift/ICET_KITTI_frame0.txt', tf.reshape(from1, [-1, 3]).numpy())\n",
+    "# np.savetxt('perspective_shift/ICET_KITTI_frame1.txt', tf.reshape(from2, [-1, 3]).numpy())\n",
     "\n",
+    "model = tf.keras.models.load_model(\"perspective_shift/KITTInet.kmod\")\n",
     "from_DNN = model.predict(x_test)\n",
-    "# print(from_DNN*0.1)\n",
+    "# print(from_DNN)\n",
     "# print(np.shape(from_DNN))\n",
-    "# print(tf.math.reduce_mean(from_DNN, axis = 0)*0.1)\n"
+    "print(tf.math.reduce_mean(from_DNN, axis = 0))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Identify compact directions where ICET and DNN disagree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[-1.37983456e-01  6.91502541e-02  3.23325284e-02]\n",
+      " [ 4.89876680e-02  1.31267563e-01  5.36474586e-03]\n",
+      " [ 8.64065140e-02  9.51721668e-02  4.77753580e-02]\n",
+      " [ 5.87065630e-02  5.37295528e-02  6.19594008e-04]\n",
+      " [ 4.20989431e-02  1.27513669e-02  9.79841128e-03]\n",
+      " [-3.71711031e-02 -5.18291816e-02  2.85657421e-02]\n",
+      " [-3.72207630e-03  9.15056989e-02 -1.65947005e-02]\n",
+      " [ 3.78499813e-02  8.08158144e-02 -2.31608283e-03]\n",
+      " [-1.02414221e-01 -5.16712487e-01  1.16202282e-02]\n",
+      " [-1.67563483e-02 -2.03320738e-02  2.64154701e-03]\n",
+      " [-6.05618581e-02  3.39975655e-02  3.69084626e-03]\n",
+      " [-1.46405986e-02  6.09222567e-04 -1.69675082e-01]\n",
+      " [ 8.51367787e-02  5.01784161e-02 -1.36203421e-02]\n",
+      " [-7.09618330e-02  1.17868349e-01 -2.31520385e-02]\n",
+      " [-3.85052413e-02  7.32377172e-02 -7.72441924e-02]\n",
+      " [-6.31802380e-02  7.72530958e-03 -6.24094829e-02]\n",
+      " [-2.09369510e-02  9.00394097e-03 -6.50332421e-02]\n",
+      " [-1.20060638e-01  8.04620460e-02  2.77101547e-02]\n",
+      " [-5.66690490e-02  3.18022460e-01 -1.25443980e-01]\n",
+      " [ 6.16331771e-02  3.33237648e-03  7.51928985e-03]\n",
+      " [-3.56167316e-01  1.97660476e-01 -2.22103298e-02]\n",
+      " [-8.42971355e-02  1.92783047e-02 -9.31892917e-02]\n",
+      " [ 2.22254395e-02 -5.42966872e-02  3.13393548e-02]\n",
+      " [ 5.23389876e-03  2.10789237e-02  3.12412158e-02]\n",
+      " [-2.05946341e-02  1.74759887e-03 -2.85673328e-03]\n",
+      " [ 3.28490511e-02 -3.76037769e-02 -1.48040708e-02]\n",
+      " [-1.46724880e-01  8.89471099e-02 -2.57022623e-02]\n",
+      " [-7.76917785e-02 -2.69862376e-02 -8.95581767e-03]\n",
+      " [-2.34133720e-01  6.46176636e-02  3.03854197e-02]\n",
+      " [ 1.20108947e-02 -3.10541689e-02  8.07866901e-02]\n",
+      " [ 2.67869234e-01  1.24761634e-01 -2.86874235e-01]\n",
+      " [ 3.42457741e-02  8.83664861e-02  7.88328648e-02]\n",
+      " [ 1.25882268e-01 -1.54982135e-02  5.64169958e-02]\n",
+      " [-1.26205146e-01 -1.54305063e-02  1.42662093e-01]\n",
+      " [-3.66775125e-01 -8.57023299e-02  1.44702867e-01]\n",
+      " [-4.22905147e-01  7.18023419e-01 -6.90400451e-02]\n",
+      " [ 5.97442687e-02 -9.09410119e-02  1.85697511e-01]\n",
+      " [-4.72190753e-02  2.62914281e-02 -2.39832662e-02]\n",
+      " [-1.18995190e-01 -4.17711735e-02  9.38133523e-03]\n",
+      " [ 7.16664456e-03  1.35029539e-01 -1.61855482e-03]\n",
+      " [ 1.15184918e-01  9.93189737e-02 -1.76614933e-02]\n",
+      " [ 1.67213798e-01 -1.06748477e-01  3.67520824e-02]\n",
+      " [-7.70573020e-02 -2.41495818e-01 -9.95662734e-02]\n",
+      " [-4.67342809e-02  1.55974641e-01 -1.35950092e-02]\n",
+      " [-1.19686529e-01 -1.98392242e-01 -2.70607024e-02]\n",
+      " [ 3.35030705e-01 -8.41616988e-02  1.13853877e-02]\n",
+      " [-8.26906562e-02 -1.89607125e-02 -6.03151806e-02]\n",
+      " [ 1.52632624e-01  1.20780990e-02 -8.30211490e-03]\n",
+      " [-1.24491632e-01  1.12110645e-01  1.53084397e-02]\n",
+      " [-5.89040518e-01 -1.67984277e-01 -3.85941006e-03]\n",
+      " [-3.11652929e-01  2.15015680e-01 -7.85893574e-02]\n",
+      " [-9.15188342e-02  1.06161043e-01  3.74366343e-02]\n",
+      " [-1.81122720e-02  4.94651720e-02 -2.67759375e-02]\n",
+      " [-1.53352410e-01  4.33736779e-02 -7.55614489e-02]\n",
+      " [-5.85416496e-01  3.61640602e-02  1.79177653e-02]\n",
+      " [-3.38611156e-02  2.10595243e-02  5.13101742e-03]\n",
+      " [-1.84641004e-01  7.77546018e-02 -3.55178863e-03]\n",
+      " [-5.95370770e-01 -5.69640756e-01  2.44708806e-02]\n",
+      " [-6.01299033e-02 -3.57222557e-02 -1.71946868e-01]\n",
+      " [ 2.78560698e-01  1.28894776e-01  6.83737025e-02]\n",
+      " [ 9.33425277e-02  1.05134092e-01  1.09552868e-01]\n",
+      " [-3.33511770e-01 -1.07398331e-02 -7.30326325e-02]\n",
+      " [ 1.31364763e-02  3.84427002e-03 -2.33218819e-03]\n",
+      " [ 2.16425397e-02 -5.94280474e-02  8.19616839e-02]\n",
+      " [-5.94889164e-01 -5.97016960e-02  7.55902827e-02]\n",
+      " [-5.59200644e-02  2.42123008e-02  5.03553264e-02]\n",
+      " [-1.37568787e-02  4.22216766e-03  6.41701147e-02]\n",
+      " [-1.34317838e-02  1.67930573e-01  6.29363954e-02]\n",
+      " [-1.96055043e-02  3.10284168e-01 -3.34431231e-02]\n",
+      " [ 1.85739389e-03  1.28064454e-01  1.59231536e-02]\n",
+      " [ 6.64939657e-02 -1.57426409e-02  9.50550102e-03]\n",
+      " [-1.93489902e-02 -1.33131221e-02  5.87571561e-02]\n",
+      " [-8.77416059e-02  2.18579173e-02 -1.02055185e-01]\n",
+      " [ 3.55132252e-01  1.81246921e-03  4.61439677e-02]\n",
+      " [-8.01133066e-02 -2.36628130e-02 -8.96250010e-02]\n",
+      " [ 4.78505373e-01  1.70124948e-01 -8.44422430e-02]\n",
+      " [-4.43284929e-01  4.11032327e-02 -1.02449628e-02]\n",
+      " [-4.17218894e-01 -2.75057852e-02  5.05848154e-02]\n",
+      " [-3.18706870e-01  1.81610808e-02  1.46254659e-01]\n",
+      " [-8.53378028e-02  5.27842417e-02  2.59008929e-02]\n",
+      " [-3.62068787e-02  4.60017473e-03  2.46975385e-02]\n",
+      " [-6.19983766e-03  1.40701625e-02 -2.23559048e-02]\n",
+      " [ 6.41299263e-02  1.99964102e-02  3.09929084e-02]\n",
+      " [-5.81042133e-02 -7.85693824e-02 -3.12424805e-02]\n",
+      " [-6.81455294e-03 -8.68922658e-03 -2.54400615e-02]\n",
+      " [-1.24786329e-03 -4.54599457e-03 -3.77360322e-02]\n",
+      " [-1.16918571e-02  6.03697896e-02 -3.21813561e-02]\n",
+      " [ 1.05087515e-02  1.17288269e-02  2.69227587e-02]\n",
+      " [ 2.76435077e-01 -1.47819472e-02  1.14791142e-02]\n",
+      " [ 3.77834976e-01 -9.28185731e-02 -1.35128116e-02]\n",
+      " [ 7.68532883e-03 -2.21556053e-03 -1.13551635e-02]\n",
+      " [ 2.11466663e-02 -1.12146325e-02  5.99682610e-03]\n",
+      " [-1.85892023e-02 -2.88443137e-02  1.49556445e-02]\n",
+      " [-6.66058739e-04  2.93802805e-02 -2.34764069e-02]\n",
+      " [ 2.04373915e-02 -8.90742242e-03  1.69359837e-02]\n",
+      " [ 2.49180980e-02  2.98068160e-03 -1.46683566e-02]\n",
+      " [ 1.24521777e-02 -6.57137111e-02  9.67818871e-03]], shape=(97, 3), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
-    "#test tile"
+    "#compare per cell translation estimates between ICET and DNN on converged results\n",
+    "dnnsoln = tf.convert_to_tensor(from_DNN)\n",
+    "# n = 0 #cell idx\n",
+    "# print(dnnsoln[n])\n",
+    "# print(it1.residuals[n])\n",
+    "print(dnnsoln - icetsoln)\n",
+    "# print(tf.math.reduce_mean(it1.residuals, axis = 0))\n",
+    "# print(tf.math.reduce_mean(dnnsoln, axis = 0))\n",
+    "\n",
+    "#align differences between solutions with the principal axis of ICET scan1\n",
+    "\n",
+    "\n",
+    "#remove extended axis\n"
    ]
   },
   {
@@ -374,9 +537,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.33398169 -0.00806366 -0.01034651]]\n",
+      "[[ 0.36177183  0.0056728   0.00114252  0.000432   -0.00459209 -0.01451318]]\n",
+      "0.110133\n"
+     ]
+    }
+   ],
    "source": [
     "#get true transformation between frames\n",
     "from metpy.calc import lat_lon_grid_deltas\n",
