--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 261,
    "metadata": {
     "scrolled": true
    },
@@ -75,83 +75,91 @@
       " tf.Tensor([0. 0. 0. 0. 0. 0.], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.3262155   0.01210681 -0.04106921  0.00583838  0.00923027  0.01366649], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([ 0.13697614  0.00553031 -0.00407132  0.00027312  0.00347769  0.00984374], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.3401218   0.01607665 -0.04202367  0.00415999  0.00952094  0.01430643], shape=(6,), dtype=float32)\n",
+      " tf.Tensor(\n",
+      "[1.6867931e-01 2.6073771e-02 2.4151979e-03 9.7187643e-05 4.1502900e-03\n",
+      " 1.2480435e-02], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34119797  0.01409373 -0.04767108  0.00347822  0.00987969  0.01422448], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([ 0.17496155  0.02236531  0.00236162 -0.00018197  0.00395004  0.0127204 ], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34124646  0.01332197 -0.05010403  0.00342584  0.01006282  0.01419171], shape=(6,), dtype=float32)\n",
+      " tf.Tensor(\n",
+      "[ 1.5210199e-01  2.5752459e-02  2.7506822e-03 -4.4269691e-05\n",
+      "  4.9630553e-03  1.2831859e-02], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34132245  0.01307193 -0.05126346  0.00335657  0.01011542  0.01418366], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([ 0.17248368  0.0216298   0.00161009 -0.00023719  0.00393567  0.01239028], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34137878  0.01301209 -0.0512762   0.00331323  0.01009187  0.0141831 ], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([ 0.17500861  0.02368551  0.00247433 -0.0001993   0.00399728  0.01265287], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34136823  0.01302305 -0.05162616  0.00330853  0.01008015  0.01418143], shape=(6,), dtype=float32)\n",
+      " tf.Tensor(\n",
+      "[ 1.5264979e-01  2.4885714e-02  2.7348874e-03 -4.9848008e-05\n",
+      "  4.9550505e-03  1.2796861e-02], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34138182  0.01302109 -0.051563    0.00330592  0.01007197  0.01418232], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([ 0.17240629  0.02164227  0.00162574 -0.00023414  0.00393774  0.0123868 ], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34138072  0.0130212  -0.05155955  0.00330578  0.01007192  0.01418234], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([ 0.17502029  0.02367854  0.00247272 -0.00019941  0.00399639  0.01265403], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34138122  0.01302189 -0.05156004  0.00330592  0.01007195  0.01418227], shape=(6,), dtype=float32)\n",
+      " tf.Tensor(\n",
+      "[ 1.5265156e-01  2.4885612e-02  2.7353403e-03 -4.9838374e-05\n",
+      "  4.9550845e-03  1.2796932e-02], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34138188  0.01302251 -0.05156026  0.00330573  0.01007202  0.01418232], shape=(6,), dtype=float32)\n",
-      "\n",
-      " ---identified moving objects---\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34761867  0.00816935 -0.03852094  0.00153197  0.00321947  0.01468292], shape=(6,), dtype=float32)\n",
-      "\n",
-      " ---identified moving objects---\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34657094  0.00923155 -0.02752825  0.00130792  0.00142311  0.01464403], shape=(6,), dtype=float32)\n",
-      "\n",
-      " ---identified moving objects---\n",
+      " tf.Tensor([ 0.17240858  0.02164241  0.00162605 -0.00023414  0.00393782  0.012387  ], shape=(6,), dtype=float32)\n",
+      "WARNING:tensorflow:AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x0000015C23078DC8> and will run it as-is.\n",
+      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
+      "Cause: unsupported operand type(s) for -: 'NoneType' and 'int'\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING: AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x0000015C23078DC8> and will run it as-is.\n",
+      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
+      "Cause: unsupported operand type(s) for -: 'NoneType' and 'int'\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34590036  0.01039635 -0.01530875  0.00141877  0.00115064  0.01465704], shape=(6,), dtype=float32)\n",
-      "\n",
-      " ---identified moving objects---\n",
+      " tf.Tensor([ 0.1743605   0.02098649  0.0022813  -0.0003496   0.0040306   0.0113547 ], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34088302  0.01251188 -0.04336598  0.00331668  0.00443468  0.01443912], shape=(6,), dtype=float32)\n",
-      "\n",
-      " ---identified moving objects---\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.3423737   0.01203058 -0.05518449  0.00343139  0.00751637  0.0143046 ], shape=(6,), dtype=float32)\n",
-      "\n",
-      " ---identified moving objects---\n",
+      " tf.Tensor(\n",
+      "[ 1.6819718e-01  2.3584040e-02  2.8521789e-03 -1.7195765e-05\n",
+      "  3.8619174e-03  1.0374408e-02], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34731695  0.00958622 -0.03680717  0.00161403  0.00300799  0.01471586], shape=(6,), dtype=float32)\n",
-      "\n",
-      " ---identified moving objects---\n",
-      "\n",
-      " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34648314  0.00927368 -0.02690463  0.00132175  0.00140331  0.01464591], shape=(6,), dtype=float32)\n",
-      "\n",
-      " ---identified moving objects---\n",
+      " tf.Tensor(\n",
+      "[ 1.6694917e-01  2.3815805e-02  1.7598957e-03 -9.0867898e-06\n",
+      "  3.7987460e-03  1.0937155e-02], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([ 0.34577984  0.01065918 -0.01411418  0.00146428  0.00106782  0.01466251], shape=(6,), dtype=float32)\n",
+      " tf.Tensor(\n",
+      "[1.7078833e-01 2.5572775e-02 1.7899743e-03 1.8349132e-05 3.6838881e-03\n",
+      " 1.2816800e-02], shape=(6,), dtype=float32)\n",
       "\n",
-      " ---identified moving objects---\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor(\n",
+      "[ 1.7694753e-01  2.6853874e-02  2.8513325e-03 -3.8830240e-06\n",
+      "  3.8056918e-03  1.4478449e-02], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.16853772  0.02436725  0.00277689 -0.00019852  0.00417881  0.01600527], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor(\n",
+      "[ 1.8077663e-01  2.8087761e-02  2.1624824e-03 -1.1037273e-04\n",
+      "  3.6097360e-03  1.4306378e-02], shape=(6,), dtype=float32)\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.17376645  0.02556069  0.0027163  -0.00021347  0.00414402  0.01486619], shape=(6,), dtype=float32)\n",
       "pred_stds: \n",
       " tf.Tensor(\n",
-      "[7.8685198e-04 8.7007898e-04 2.1067383e-03 2.6595627e-04 3.1600395e-04\n",
-      " 6.0963772e-05], shape=(6,), dtype=float32)\n"
+      "[4.2350811e-04 3.9308745e-04 3.8257826e-05 1.1422162e-05 1.3187546e-05\n",
+      " 1.1128189e-04], shape=(6,), dtype=float32)\n"
      ]
     }
    ],
@@ -168,10 +176,10 @@
     "dataset = pykitti.raw(basedir, date, drive)\n",
     "velo1 = dataset.get_velo(idx) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
     "c1 = velo1[:,:3]\n",
-    "c1 = c1[c1[:,2] > -1.5] #ignore ground plane\n",
     "velo2 = dataset.get_velo(idx+1) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
     "c2 = velo2[:,:3]\n",
-    "c2 = c2[c2[:,2] > -1.5] #ignore ground plane\n",
+    "# c1 = c1[c1[:,2] > -1.5] #ignore ground plane\n",
+    "# c2 = c2[c2[:,2] > -1.5] #ignore ground plane\n",
     "# ------------------------------------------------------------------------------------\n",
     "\n",
     "# ## load custom point cloud geneated in matlab------------------------------------------\n",
@@ -192,8 +200,8 @@
     "# D = True\n",
     "D = False\n",
     "X = tf.constant([0., 0., 0., 0., 0., 0.])\n",
-    "it1 = ICET(cloud1 = c1, cloud2 = c2,  fid = 50, draw = False, x0 = X, niter = 20, group= 2, RM = True)\n",
-    "# it2 = ICET(cloud1 = it1.cloud1_static, cloud2 = c2, fid = 50, niter = 20, draw = True, group = 2, RM = False)\n",
+    "it1 = ICET(cloud1 = c1, cloud2 = c2,  fid = 50, draw = False, \n",
+    "           x0 = X, niter = 20, group= 2, RM = False, DNN_filter = True)\n",
     "\n",
     "if D:\n",
     "    ViewInteractiveWidget(it2.plt.window)"
@@ -201,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 248,
    "metadata": {
     "scrolled": false
    },
@@ -210,16 +218,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "102\n",
-      "WARNING:tensorflow:AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x0000015B4F9FFAF8> and will run it as-is.\n",
+      "233\n",
+      "WARNING:tensorflow:AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x0000015BCD16D8B8> and will run it as-is.\n",
       "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
       "Cause: unsupported operand type(s) for -: 'NoneType' and 'int'\n",
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "WARNING: AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x0000015B4F9FFAF8> and will run it as-is.\n",
+      "WARNING: AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x0000015BCD16D8B8> and will run it as-is.\n",
       "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
       "Cause: unsupported operand type(s) for -: 'NoneType' and 'int'\n",
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "tf.Tensor([-0.01505069  0.03120127  0.0065359 ], shape=(3,), dtype=float32)\n"
+      "tf.Tensor([-0.01747427  0.01485167  0.01050758], shape=(3,), dtype=float32)\n"
      ]
     }
    ],
@@ -282,15 +290,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([102   3   3], shape=(3,), dtype=int32)\n",
-      "tf.Tensor([ 8 16 17 23 34 35 38 40 41 45 49 52 53 56 56 58 59 63 65 76 77], shape=(21,), dtype=int64)\n"
+      "tf.Tensor([233   3   3], shape=(3,), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
+      "  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35\n",
+      "  36  37  39  40  41  42  43  44  45  46  47  48  49  52  53  54  55  56\n",
+      "  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74\n",
+      "  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92\n",
+      "  93  94  95  96  97  98  99 100 101 102 103 104 105 106 107 108 109 110\n",
+      " 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128\n",
+      " 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146\n",
+      " 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164\n",
+      " 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182\n",
+      " 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200\n",
+      " 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218\n",
+      " 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236\n",
+      " 237 238 239 240 241 242 243 244 245], shape=(243,), dtype=int64)\n",
+      "tf.Tensor(\n",
+      "[  0   1   2   3   4   5   6   9  10  11  12  13  14  15  16  17  18  19\n",
+      "  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37\n",
+      "  38  39  40  41  42  43  44  45  47  48  49  50  51  52  53  54  55  56\n",
+      "  57  58  59  61  62  63  64  65  66  67  68  69  70  71  72  74  75  76\n",
+      "  77  78  79  80  81  82  83  84  85  86  88  89  90  91  92  93  94  95\n",
+      "  96  97  98  99 100 101 102 103 104 105 106 107 108 109 110 111 112 113\n",
+      " 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131\n",
+      " 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149\n",
+      " 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167\n",
+      " 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185\n",
+      " 186 187 188 190 191 192 193 194 195 196 197 198 201 202 203 204 205 206\n",
+      " 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224\n",
+      " 225 226 227 228 229 230 231 232 233 234 235 236 237 238 240 241 242], shape=(233,), dtype=int64)\n"
      ]
     }
    ],
@@ -316,9 +352,10 @@
     "#TODO: \n",
     "#  1) get IDX of elements that are in both enough1 and corr\n",
     "#  2) use this to index U and L to get U_i and L_i\n",
+    "print(it1.enough1)\n",
     "both = tf.sets.intersection(it1.enough1[None,:], it1.corr[None,:]).values\n",
     "ans = tf.where(it1.enough1[:,None] == both)[:,0]\n",
-    "# print(ans)\n",
+    "print(ans)\n",
     "\n",
     "#project into frame of principal axis of distribution from scan1, prune extended axis\n",
     "LUT = tf.matmul(L, tf.transpose(U, [0,2,1]))\n",
@@ -331,7 +368,7 @@
     "thresh = 0.1\n",
     "#be careful- not sure what this index corresponds to (may not be voxel ID)\n",
     "problem_voxels = tf.where(tf.math.abs(it_compact - dnn_compact) > thresh)[:,0]\n",
-    "print(problem_voxels)\n",
+    "# print(problem_voxels)\n",
     "\n",
     "\n",
     "#remove extended axis\n",
