--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 267,
    "metadata": {
     "scrolled": false
    },
@@ -218,16 +218,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "233\n",
-      "WARNING:tensorflow:AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x0000015BCD16D8B8> and will run it as-is.\n",
+      "210\n",
+      "WARNING:tensorflow:AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x0000015BE15E03A8> and will run it as-is.\n",
       "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
       "Cause: unsupported operand type(s) for -: 'NoneType' and 'int'\n",
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "WARNING: AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x0000015BCD16D8B8> and will run it as-is.\n",
+      "WARNING: AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x0000015BE15E03A8> and will run it as-is.\n",
       "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
       "Cause: unsupported operand type(s) for -: 'NoneType' and 'int'\n",
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "tf.Tensor([-0.01747427  0.01485167  0.01050758], shape=(3,), dtype=float32)\n"
+      "tf.Tensor([-0.02532178  0.04462416  0.00818345], shape=(3,), dtype=float32)\n"
      ]
     }
    ],
@@ -290,43 +290,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([233   3   3], shape=(3,), dtype=int32)\n",
+      "tf.Tensor([210   3   3], shape=(3,), dtype=int32)\n",
       "tf.Tensor(\n",
-      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
-      "  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35\n",
-      "  36  37  39  40  41  42  43  44  45  46  47  48  49  52  53  54  55  56\n",
-      "  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74\n",
-      "  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92\n",
-      "  93  94  95  96  97  98  99 100 101 102 103 104 105 106 107 108 109 110\n",
-      " 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128\n",
-      " 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146\n",
-      " 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164\n",
-      " 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182\n",
-      " 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200\n",
-      " 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218\n",
-      " 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236\n",
-      " 237 238 239 240 241 242 243 244 245], shape=(243,), dtype=int64)\n",
-      "tf.Tensor(\n",
-      "[  0   1   2   3   4   5   6   9  10  11  12  13  14  15  16  17  18  19\n",
-      "  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37\n",
-      "  38  39  40  41  42  43  44  45  47  48  49  50  51  52  53  54  55  56\n",
-      "  57  58  59  61  62  63  64  65  66  67  68  69  70  71  72  74  75  76\n",
-      "  77  78  79  80  81  82  83  84  85  86  88  89  90  91  92  93  94  95\n",
-      "  96  97  98  99 100 101 102 103 104 105 106 107 108 109 110 111 112 113\n",
-      " 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131\n",
-      " 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149\n",
-      " 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167\n",
-      " 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185\n",
-      " 186 187 188 190 191 192 193 194 195 196 197 198 201 202 203 204 205 206\n",
-      " 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224\n",
-      " 225 226 227 228 229 230 231 232 233 234 235 236 237 238 240 241 242], shape=(233,), dtype=int64)\n"
+      "[ 6  9 15 18 19 23 26 28 35 37 38 39 40 41 43 44 46 47 47 53 65 68 71 86\n",
+      " 96], shape=(25,), dtype=int64)\n",
+      "tf.Tensor([ 6  9 15 18 19 23 26 28 35 37 38 39 40 41 43 44 46 47 53 65 68 71 86 96], shape=(24,), dtype=int64)\n"
      ]
     }
    ],
@@ -352,10 +327,10 @@
     "#TODO: \n",
     "#  1) get IDX of elements that are in both enough1 and corr\n",
     "#  2) use this to index U and L to get U_i and L_i\n",
-    "print(it1.enough1)\n",
+    "# print(it1.enough1)\n",
     "both = tf.sets.intersection(it1.enough1[None,:], it1.corr[None,:]).values\n",
     "ans = tf.where(it1.enough1[:,None] == both)[:,0]\n",
-    "print(ans)\n",
+    "# print(ans)\n",
     "\n",
     "#project into frame of principal axis of distribution from scan1, prune extended axis\n",
     "LUT = tf.matmul(L, tf.transpose(U, [0,2,1]))\n",
@@ -368,11 +343,52 @@
     "thresh = 0.1\n",
     "#be careful- not sure what this index corresponds to (may not be voxel ID)\n",
     "problem_voxels = tf.where(tf.math.abs(it_compact - dnn_compact) > thresh)[:,0]\n",
-    "# print(problem_voxels)\n",
+    "print(problem_voxels)\n",
+    "problem_voxels = tf.unique(problem_voxels)[0] #get rid of repeated indices\n",
+    "print(problem_voxels)\n",
     "\n",
     "\n",
     "#remove extended axis\n",
     "# print(dnnsoln - icetsoln)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "print((2>a).any())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.96466022 1.48849646 2.37778498]\n",
+      "[1.25994356 1.13704732 1.96957449]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test the mean of a subset of a point cloud vs the mean of the full cloud\n",
+    "pts = np.random.randn(50,3)*np.array([2, 3, 4]) + np.array([1,2,3])\n",
+    "print(np.mean(pts, axis = 0))\n",
+    "print(np.mean(pts[:25,:], axis = 0))"
    ]
   },
   {
@@ -548,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -615,9 +631,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 263,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4]\n",
+      " [0 2 3 4]]\n"
+     ]
+    }
+   ],
    "source": [
     "test = np.array([[1,2,3,4]])\n",
     "test = np.append(test,np.array([[0,2,3,4]]),axis = 0)\n",
