working on MC trials, generated more renderings, working on making egovehicle tangent to surface being estimated

--- a/v3/MC_results.ipynb
+++ b/v3/MC_results.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "humanitarian-piece",
+   "id": "existing-private",
    "metadata": {},
    "outputs": [
     {
@@ -24,45 +24,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "alleged-moral",
+   "execution_count": 53,
+   "id": "statutory-gabriel",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.14189343e-03 9.00599066e-04 2.31349732e-04 3.23561837e-05\n",
-      " 2.10555801e-05 6.38037174e-05]\n"
+      "[0.00183839 0.00020515 0.00012555]\n",
+      "[0.0020247  0.00176425 0.00110244]\n"
      ]
     }
    ],
    "source": [
-    "# Ground truth = [0.5, 0., 0., 0.0, 0.0, 0.0]\n",
-    "fn1 = \"MC_results/s2_spherical_ICET_estimates_no_trees_with_rotation.npy\" \n",
-    "fn2 = \"MC_results/s2_spherical_ICET_pred_stds_no_trees_with_rotation.npy\"\n",
+    "# Ground truth = [0.5, 0., 0., 0.0, 0.0, 0.01]\n",
+    "fn1 = \"MC_results/s1_spherical_ICET_estimates.npy\" \n",
+    "fn2 = \"MC_results/s1_spherical_ICET_pred_stds.npy\"\n",
+    "\n",
+    "# fn1 = \"MC_results/s2_spherical_ICET_estimates_no_trees_with_rotation.npy\" \n",
+    "# fn2 = \"MC_results/s2_spherical_ICET_pred_stds_no_trees_with_rotation.npy\"\n",
     "\n",
     "est = np.load(fn1)\n",
     "pred_stds = np.load(fn2)\n",
     "\n",
-    "print(np.mean(pred_stds, axis = 0))\n",
+    "print(np.mean(pred_stds, axis = 0)[:3])\n",
+    "print(np.rad2deg(np.mean(pred_stds, axis = 0)[3:]))\n",
+    "\n",
     "# print(np.std(pred_stds, axis = 0)) #shows consistant prediction for soln std for constant scene"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "architectural-prospect",
+   "execution_count": 54,
+   "id": "returning-offset",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-4.98071852e-01 -1.99642767e-01  1.37480897e-04 -9.37724751e-06\n",
-      "  4.89969694e-06 -9.91777082e-03]\n",
-      "[7.35960964e-04 7.90500906e-04 1.36081497e-04 2.03816636e-05\n",
-      " 1.35707611e-05 3.58154436e-05]\n"
+      "[-4.98799649e-01  8.10841116e-05 -1.04727248e-04 -1.59457305e-06\n",
+      "  2.53975762e-05 -1.00026404e-02]\n",
+      "[0.0018876  0.00019527 0.00012981]\n",
+      "[0.00238716 0.00187576 0.00123174]\n"
      ]
     }
    ],
@@ -72,13 +77,14 @@
     "std = np.std(est, axis = 0)\n",
     "\n",
     "print(mean)\n",
-    "print(std)"
+    "print(std[:3])\n",
+    "print(np.rad2deg(std[3:]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "warming-indonesian",
+   "id": "stone-satellite",
    "metadata": {},
    "outputs": [],
    "source": []
