remade figs 2 3 and 4 with updated scene, highlighted points captured withing four voxels

--- a/v3/MC_results.ipynb
+++ b/v3/MC_results.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "physical-tenant",
+   "id": "norman-remedy",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "id": "spoken-longitude",
+   "id": "altered-webster",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "automotive-devil",
+   "id": "spoken-banks",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "global-computer",
+   "id": "suited-sapphire",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 314,
-   "id": "formed-interval",
+   "id": "medieval-compatibility",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 315,
-   "id": "saving-british",
+   "id": "laughing-needle",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "id": "honest-redhead",
+   "id": "dominican-multimedia",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "coupled-violence",
+   "id": "quarterly-million",
    "metadata": {},
    "outputs": [
     {
@@ -282,8 +282,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 316,
+   "id": "stock-context",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.linspace(0,10,11))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "clean-hammer",
+   "id": "concrete-joining",
    "metadata": {},
    "outputs": [],
    "source": []
