revisiting DNN project

--- a/v3/3d_paper/MC_results.ipynb
+++ b/v3/3d_paper/MC_results.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 308,
    "id": "numerical-pearl",
    "metadata": {},
    "outputs": [
@@ -94,8 +94,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.01393049e-01 1.01348195e-01 1.16179285e-04 1.23675739e-03\n",
-      " 1.26952530e-03 1.73422724e+00]\n"
+      "[ 3.07450434e-03  6.40109692e-04 -4.69514129e-05  2.85511776e-07\n",
+      " -1.99944721e-06 -2.09026590e-03] \n",
+      "\n",
+      "[1.04467554e-01 1.01988305e-01 1.63130698e-04 1.23704290e-03\n",
+      " 1.27152475e-03 1.73631751e+00]\n"
      ]
     }
    ],
@@ -120,7 +123,7 @@
     "# print(mean, \"\\n\")\n",
     "std = np.std(est, axis = 0)\n",
     "std[3:] = np.rad2deg(std[3:]) #convert angles to degrees\n",
-    "# std += np.abs(mean) #add in any net offset\n",
+    "std += np.abs(mean) #add in any net offset\n",
     "\n",
     "print(std)"
    ]
@@ -1216,7 +1219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "electronic-voice",
+   "id": "automotive-swiss",
    "metadata": {},
    "outputs": [],
    "source": []
