--- a/v3/perspective_shift/modelNet10_benchmark.ipynb
+++ b/v3/perspective_shift/modelNet10_benchmark.ipynb
@@ -2,10 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "breathing-blair",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Derm\\anaconda3\\envs\\tf23\\lib\\site-packages\\numpy\\_distributor_init.py:32: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\Derm\\anaconda3\\envs\\tf23\\lib\\site-packages\\numpy\\.libs\\libopenblas.PYQHXLVVQ7VESDPUVUADXEVJOBGHJPAY.gfortran-win_amd64.dll\n",
+      "C:\\Users\\Derm\\anaconda3\\envs\\tf23\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
+      "  stacklevel=1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3.0\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(180000)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosaving every 180 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "#setup - rememeber to switch to tensorflow 2.3 kernel...\n",
     "import numpy as np\n",
@@ -41,10 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bottom-clearing",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "took  0.0710153579711914 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "#load OFF file from ModelNet10 dir\n",
     "start = time.time()\n",
@@ -60,10 +102,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "acknowledged-spencer",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "215ca9783be84d5bafd2739904195f4f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#use Vedo to plot OG and subsampled surfaces\n",
     "plt1 = Plotter(N = 1, axes = 4, bg = (1, 1, 1), interactive = True)\n",
@@ -74,7 +131,7 @@
     "toilet = Mesh(M).c(\"gray\").alpha(0.2)\n",
     "disp.append(toilet)\n",
     "\n",
-    "disp.append(Points(x_train[50,:,:].numpy(), c = 'blue', r = 5)) #test drawing unknown point cloud\n",
+    "# disp.append(Points(x_train[50,:,:].numpy(), c = 'blue', r = 5)) #test drawing unknown point cloud\n",
     "\n",
     "plt1.show(disp, \"surface sampling test\")\n",
     "ViewInteractiveWidget(plt1.window)"
@@ -200,10 +257,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "boring-sherman",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(54000, 512, 3)\n",
+      "(54000, 512, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "#load data from memory\n",
     "numMeshes = 300 #344\n",
@@ -285,10 +351,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "chronic-centre",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([54000   512     3], shape=(3,), dtype=int32)\n",
+      "tf.Tensor([54000     6], shape=(2,), dtype=int32)\n"
+     ]
+    }
+   ],
    "source": [
     "x_train = tf.convert_to_tensor(x_train)\n",
     "y_train = tf.convert_to_tensor(y_train)\n",
