fixed voxel-skipping bug in rare compact surfaces

--- a/v3/demo/sigmaPoint/drawWallFig.ipynb
+++ b/v3/demo/sigmaPoint/drawWallFig.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "id": "demanding-lottery",
    "metadata": {},
    "outputs": [
@@ -139,17 +139,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " jumps \n",
-      " tf.Tensor(\n",
-      "[[ 102    4]\n",
-      " [ 116    5]\n",
-      " [ 945    0]\n",
-      " [1257    3]\n",
-      " [1271    2]], shape=(5, 2), dtype=int64)\n",
-      "used tf.Tensor([[4 5 0 3 2]], shape=(1, 5), dtype=int64)\n",
-      "missing tf.Tensor([[1]], shape=(1, 1), dtype=int64)\n",
-      "z tf.Tensor([[51]], shape=(1, 1), dtype=int64)\n",
-      "OG_rads tf.Tensor(\n",
+      " missing tf.Tensor([[1]], shape=(1, 1), dtype=int64)\n",
+      "\n",
+      " OG_rads tf.Tensor(\n",
       "[[62.233017 55.3377   51.28682  51.299477 52.1207   52.549694]\n",
       " [55.97538  59.062405 50.991444 52.13219  52.109894 52.91746 ]\n",
       " [54.48706  54.104618 50.72865  51.717876 52.075397 52.674427]\n",
@@ -157,8 +149,12 @@
       " [ 0.       53.510048  0.        0.        0.        0.      ]\n",
       " [ 0.       54.902714  0.        0.        0.        0.      ]\n",
       " [ 0.       62.251385  0.        0.        0.        0.      ]], shape=(1304, 6), dtype=float32)\n",
-      "tf.Tensor([[55.97538  59.062405 50.991444 52.13219  52.109894 52.91746 ]], shape=(1, 6), dtype=float32)\n",
-      "tf.Tensor([[51  1]], shape=(1, 2), dtype=int64)\n",
+      "\n",
+      " ends tf.Tensor([ 946 1304 1272 1258  103  117], shape=(6,), dtype=int64)\n",
+      "\n",
+      " test tf.Tensor([1304], shape=(1,), dtype=int64)\n",
+      "z tf.Tensor([[1302]], shape=(1, 1), dtype=int64)\n",
+      "tf.Tensor([[1302    1]], shape=(1, 2), dtype=int64)\n",
       "\n",
       " jumps after fix tf.Tensor(\n",
       "[[ 102    4]\n",
@@ -166,29 +162,11 @@
       " [ 945    0]\n",
       " [1257    3]\n",
       " [1271    2]\n",
-      " [  51    1]], shape=(6, 2), dtype=int64)\n",
-      "jumps_i 0  \n",
-      " [[  0   0]\n",
-      " [945   0]]\n",
-      "jumps_i 1  \n",
-      " [[ 0  1]\n",
-      " [51  1]]\n",
-      "jumps_i 2  \n",
-      " [[   0    2]\n",
-      " [1271    2]]\n",
-      "jumps_i 3  \n",
-      " [[   0    3]\n",
-      " [1257    3]]\n",
-      "jumps_i 4  \n",
-      " [[  0   4]\n",
-      " [102   4]]\n",
-      "jumps_i 5  \n",
-      " [[  0   5]\n",
-      " [116   5]]\n",
+      " [1302    1]], shape=(6, 2), dtype=int64)\n",
       "\n",
       " bounds tf.Tensor(\n",
       "[[51.98115921 63.12488174]\n",
-      " [51.46256638 52.15077591]\n",
+      " [51.46256638 62.31725311]\n",
       " [50.21660233 52.54222488]\n",
       " [50.65130234 53.3983345 ]\n",
       " [51.7817688  52.79418182]\n",
@@ -198,41 +176,26 @@
       " tf.Tensor([0. 0. 0. 0. 0. 0.], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([-0.017345   -0.01456089 -0.0004775   0.02958992  0.03967641  0.01621143], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([-0.10881729 -0.09038963 -0.00539994 -0.00248044 -0.00205464  0.00887413], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([-0.0883401  -0.06687941 -0.00479516  0.00773568  0.00963523  0.01253494], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([-0.11106122 -0.09224976 -0.00551897 -0.00277268 -0.00261088  0.00885099], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([-0.08890845 -0.06725936 -0.0048116   0.0070751   0.00963649  0.01119591], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([-0.11104988 -0.09224039 -0.00551832 -0.00277334 -0.0026003   0.00885376], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([-0.09170675 -0.06931966 -0.00490938  0.00623572  0.00849715  0.0109797 ], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([-0.1110666  -0.09225425 -0.00551921 -0.00277602 -0.00260466  0.00885313], shape=(6,), dtype=float32)\n",
       "pred_stds: \n",
-      " tf.Tensor([0.00681324 0.00556286 0.00168061 0.00249018 0.00310417 0.00053138], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([0.00252145 0.00208951 0.00013345 0.00087599 0.00084655 0.00015722], shape=(6,), dtype=float32)\n",
       " L2: \n",
       " tf.Tensor(\n",
-      "[[1. 0. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0. 0.]\n",
+      "[[0. 1. 0. 0. 0. 0.]\n",
       " [0. 0. 1. 0. 0. 0.]\n",
       " [0. 0. 0. 1. 0. 0.]\n",
       " [0. 0. 0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0. 0. 1.]], shape=(6, 6), dtype=float32)\n"
+      " [0. 0. 0. 0. 0. 1.]], shape=(5, 6), dtype=float32)\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2221e0c4d0d44961ab0e6305348082c3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -247,9 +210,12 @@
     "# print(currentdir)\n",
     "# print(parentdir)\n",
     "\n",
-    "it1 = ICET(cloud1 = pts1, cloud2 = pts2,  fid = 40, draw = True, \n",
+    "D = True\n",
+    "# D = False\n",
+    "it1 = ICET(cloud1 = pts1, cloud2 = pts2,  fid = 40, draw = D, \n",
     "            niter = 5, group= 2, RM = False, DNN_filter = False)\n",
-    "ViewInteractiveWidget(it1.plt.window)"
+    "if D:\n",
+    "    ViewInteractiveWidget(it1.plt.window)"
    ]
   },
   {
